Bug 862947: Use cb height instead of width for vertical margins & padding on flex items, even when they're a reflow root (e.g. for measuring reflow states). r=mats